Fix:Link Overlapping

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 *{
     transition: .5s linear;
+    box-sizing: border-box;
 }
 body {
     font-family: 'Ubuntu',
@@ -146,6 +147,7 @@ section .sec-heading {
 }
 section .sec-text{
     min-height: 10vh;
+    margin: 1rem 0;
 }
 .sec-off-white {
     background-color: var(--grey-color);
